# ComfyUI-GraphControlEndpoint

./: .gitignore  CLAUDE.md  EditGraphViaEndpoint.md  __init__.py  pyproject.toml  test.bat
docs/: API.md
docs/plans/: 2026-02-23-graph-control-endpoint-design.md
nodes/: graph_control.py
tests/: conftest.py  test_graph_batch.py  test_graph_command.py  test_graph_queue.py  test_graph_save_load.py  test_graph_state.py  test_graph_ws.py  test_node_types.py
web/: graph_control.js
ws/: graph_ws.py
