[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui-graph-control-endpoint"
version = "0.1.0"
description = "HTTP/WebSocket을 통한 ComfyUI LiteGraph 원격 제어 익스텐션"
requires-python = ">=3.10"
dependencies = [
    "aiohttp",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-aiohttp",
]

[tool.setuptools.packages.find]
include = ["nodes*", "ws*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
